--- a/src/collectd.conf.pod
+++ b/src/collectd.conf.pod
@@ -5670,7 +5670,7 @@ C<I<prefix>/var/run/collectd-powerdns>.
 Select more detailed statistics of processes matching this name. The statistics
 collected for these selected processes are size of the resident segment size
 (RSS), user- and system-time used, number of processes and number of threads,
-io data (where available) and minor and major pagefaults.
+number of open files, io data (where available) and minor and major pagefaults.
 
 Some platforms have a limit on the length of process names. I<Name> must stay
 below this limit.
